--- a/lib/main.less
+++ b/lib/main.less
@@ -5,6 +5,21 @@
 	}
 	.loop(@n,(@l+1));
 }
+
+#light {
+	& > div:nth-child(1) {
+		background-color: rgba(255, 255, 255, 0.8);
+	}
+	& > div:nth-child(2) {
+		& > div {
+			background-color: #666;
+		}
+	}
+	& > div:nth-child(3) {
+		color: #666;
+	}
+}
+
 .lesca-loading {
 	position: fixed;
 	top: 0;
@@ -13,24 +28,29 @@
 	width: 100%;
 	height: 100%;
 
-	.lesca-loading-c {
+	& > .background {
 		position: absolute;
-		left: 50%;
-		top: 50%;
+		width: 100%;
+		height: 100%;
+		background-color: rgba(0, 0, 0, 0.8);
+	}
 
+	@keyframes play {
+		100% {
+			transform: rotate(360deg);
+		}
+	}
+
+	& > .ico {
 		position: absolute;
-		left: 50%;
+		width: 0;
+		height: 0;
 		top: 50%;
+		left: 50%;
 		margin-top: -25px;
 		animation: play 2s steps(18) infinite;
 
-		@keyframes play {
-			100% {
-				transform: rotate(360deg);
-			}
-		}
-
-		.l {
+		& > div {
 			position: absolute;
 			width: 15px;
 			height: 2px;
@@ -40,44 +60,14 @@
 
 			.loop(18);
 		}
-
-		.dark {
-			background-color: #fff;
-		}
-
-		.light {
-			background-color: #343a40;
-		}
 	}
 
-	.lesca-loading-text {
+	& > .text {
 		position: absolute;
 		top: 50%;
 		text-align: center;
 		width: 100%;
 		margin-top: 20px;
-	}
-
-	.lesca-loading-bg {
-		position: absolute;
-		width: 100%;
-		height: 100%;
-		opacity: 0.95;
-	}
-
-	.dark {
-		background-color: #111;
-	}
-
-	.tdark {
 		color: #f8f9fa;
-	}
-
-	.light {
-		background-color: #f8f9fa;
-	}
-
-	.tlight {
-		color: #111;
 	}
 }
