--- a/src/docs/styles.css
+++ b/src/docs/styles.css
@@ -4,7 +4,7 @@ body {
 	margin: 0;
 }
 
-.lesca-loading .background {
+/* .lesca-loading .background {
 	background-color: rgba(255, 0, 0, 1);
 }
 
@@ -14,4 +14,4 @@ body {
 
 .lesca-loading .text {
 	color: rgba(255, 250, 0, 1);
-}
+} */
