--- a/src/lib/style.less
+++ b/src/lib/style.less
@@ -1,73 +1,62 @@
 .loop(@n, @l:0) when (@l <= @n) {
-	&:nth-child(@{l}) {
-		transform: rotate(@l*20deg);
-		opacity: @l * 0.05;
-	}
-	.loop(@n,(@l+1));
-}
-
-#light {
-	& > div:nth-child(1) {
-		background-color: rgba(255, 255, 255, 0.8);
-	}
-	& > div:nth-child(2) {
-		& > div {
-			background-color: #666;
-		}
-	}
-	& > div:nth-child(3) {
-		color: #666;
-	}
+  &:nth-child(@{l}) {
+    transform: rotate(@l*20deg);
+    opacity: @l * 0.05;
+  }
+  .loop(@n,(@l+1));
 }
 
 .lesca-loading {
-	position: fixed;
-	top: 0;
-	left: 0;
-	z-index: 999;
-	width: 100%;
-	height: 100%;
+  position: fixed;
+  top: 0;
+  left: 0;
+  z-index: 99999;
+  width: 100%;
+  height: 100%;
 
-	& > .background {
-		position: absolute;
-		width: 100%;
-		height: 100%;
-		background-color: rgba(0, 0, 0, 0.8);
-	}
+  & > .background {
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    background-color: rgba(0, 0, 0, 0.8);
+  }
 
-	@keyframes play {
-		100% {
-			transform: rotate(360deg);
-		}
-	}
+  @keyframes play {
+    100% {
+      transform: rotate(360deg);
+    }
+  }
 
-	& > .ico {
-		position: absolute;
-		width: 0;
-		height: 0;
-		top: 50%;
-		left: 50%;
-		margin-top: -25px;
-		animation: play 2s steps(18) infinite;
+  & > .content {
+    position: absolute;
+    top: 50%;
+    width: 100%;
 
-		& > div {
-			position: absolute;
-			width: 15px;
-			height: 2px;
-			left: 20px;
-			transform-origin: -20px 0px;
-			background-color: #fff;
+    .ico {
+      position: absolute;
+      left: 50%;
+      margin-top: -25px;
+      width: 0;
+      height: 0;
+      animation: play 2s steps(18) infinite;
 
-			.loop(18);
-		}
-	}
+      & > div {
+        position: absolute;
+        left: 20px;
+        width: 15px;
+        height: 2px;
+        transform-origin: -20px 0px;
 
-	& > .text {
-		position: absolute;
-		top: 50%;
-		text-align: center;
-		width: 100%;
-		margin-top: 20px;
-		color: #f8f9fa;
-	}
+        .loop(18);
+      }
+    }
+
+    & > .text {
+      position: absolute;
+      margin-top: 20px;
+      width: 100%;
+      color: #f8f9fa;
+      text-align: center;
+    }
+  }
 }
